[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dotenv = "0.15"  # For managing .env configs
async-trait = "0.1.52"  # Add this line